--- a/assets/style/components/gallery.css
+++ b/assets/style/components/gallery.css
@@ -1,14 +1,18 @@
 .gallery header .right-container .links-box .link-social {
   filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
 }
-.gallery header {
+.gallery .header {
   color: white;
 }
-.gallery header a {
+.gallery .header .left-container nav ul li a {
   color: white;
 }
-.gallery header .left-container nav ul li a {
+.gallery .header a {
   color: white;
+}
+.gallery .header .right-container .city-name {
+  color: white;
+  font-size: 0.7em;
 }
 
 .gallery {
@@ -35,7 +39,6 @@
   margin-bottom: 20vh;
 }
 .gallery .gallery-content .headshots .title, .gallery .gallery-content .editorial-shots .title, .gallery .gallery-content .production-shots .title {
-  width: 100;
   height: 15vh;
   display: flex;
   justify-content: space-around;
@@ -49,8 +52,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
 }
-.gallery .gallery-content .headshots .inner .top .bottom, .gallery .gallery-content .editorial-shots .inner .top .bottom, .gallery .gallery-content .production-shots .inner .top .bottom {
+.gallery .gallery-content .headshots .inner .top, .gallery .gallery-content .headshots .inner .bottom, .gallery .gallery-content .editorial-shots .inner .top, .gallery .gallery-content .editorial-shots .inner .bottom, .gallery .gallery-content .production-shots .inner .top, .gallery .gallery-content .production-shots .inner .bottom {
   display: flex;
   gap: 10px;
 }
@@ -60,7 +64,20 @@
   flex: 4;
   -o-object-fit: cover;
      object-fit: cover; /* Ensure images cover the available space without distortion */
+  -o-object-position: top;
+     object-position: top; /* Center the image */
   max-width: 100%;
+}
+.gallery .gallery-content .production-shots .top .img-container, .gallery .gallery-content .production-shots .mid .img-container, .gallery .gallery-content .production-shots .bottom .img-container {
+  position: relative;
+}
+.gallery .gallery-content .production-shots .top .img-container .i1, .gallery .gallery-content .production-shots .mid .img-container .i1, .gallery .gallery-content .production-shots .bottom .img-container .i1 {
+  -o-object-position: top right;
+     object-position: top right;
+}
+.gallery .gallery-content .production-shots .top .img-container .i3, .gallery .gallery-content .production-shots .mid .img-container .i3, .gallery .gallery-content .production-shots .bottom .img-container .i3 {
+  -o-object-position: top left;
+     object-position: top left;
 }
 
 @media only screen and (max-width: 640px) {
