--- a/assets/style/components/media.scss
+++ b/assets/style/components/media.scss
@@ -1,10 +1,11 @@
 
 .media {
-  header {
+  .header {
     width: 100%;
     position: relative;
     color: rgba(255, 255, 255, 0.825);
-    background-color: rgb(40, 87, 174);
+    background-color: rgb(18, 119, 147);
+
 
     a {
         color: rgba(255, 255, 255, 0.825);
@@ -16,12 +17,19 @@
 
     }
 
-    .right-container .links-box .link-social {
+    .right-container {
+      .city-name{
+        color: rgba(255, 255, 255, 0.825);
+         font-size: .7em;
+      }
+      .links-box .link-social {
         // filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
         // filter: invert(80%) sepia(100%) saturate(500%) hue-rotate(180deg);
         filter: invert(100%) brightness(100%);
         opacity: 0.825;
+      }
     }
+
 
 }
 }
@@ -42,7 +50,7 @@
             text-align: center;
             width: 100%;
             padding: 5vh;
-            background-color: rgb(40, 87, 174);
+            background-color: rgb(18, 119, 147);
             color: white;
 
             h2{
