--- a/assets/style/components/contact.scss
+++ b/assets/style/components/contact.scss
@@ -1,11 +1,12 @@
 
 .contact {
-    header {
+    .header {
 
         width: 100%;
         position: relative;
         color: rgba(255, 255, 255, 0.825);
-        background-color: rgb(40, 87, 174);
+        background-color: rgb(18, 119, 147);
+
 
         a {
             color: rgba(255, 255, 255, 0.825);
@@ -17,11 +18,18 @@
 
         }
 
-        .right-container .links-box .link-social {
+        .right-container 
+        {
+            .city-name{
+                color : rgba(255, 255, 255, 0.825);
+                font-size: .7em;
+            }
+            .links-box .link-social {
             // filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
             // filter: invert(80%) sepia(100%) saturate(500%) hue-rotate(180deg);
             filter: invert(100%) brightness(100%);
             opacity: 0.825;
+            }
         }
 
     }
@@ -44,7 +52,7 @@
                 text-align: center;
                 width: 100%;
                 padding: 5vh;
-                background-color: rgb(40, 87, 174);
+                background-color: rgb(18, 119, 147);
                 color: white;
     
                 h2{
@@ -59,48 +67,66 @@
             max-width: 1500px;
 
             .main{
-                padding : 5vh;
+                padding : 5vh 10vw;
                 display: flex;
                 justify-content: center;
                 align-items: center;
-
+                // border: 2px solid red;
 
                 .contact-photo{
                     width: 40vw;
-                    .img-container {
-                        height: 70vh;
-                        max-width: 40vw;
+                    .img-container{
+                        width: 100%;
                         img{
-                            height: 100%;
                             width: 100%;
-                            object-fit: cover;
-                            // border : 2px red solid;
                         }
                     }
                 }
                 .bio{
+                    width: 40vw;
+                }
+
+                // .contact-photo{
+                //     border: 1px solid red;
+                //     width: 40vw;
+                //     .img-container {
+                //         height: 80vh;
+                //         min-width: 40vw;
+                //         // position: relative;
+                //         img{
+                //             // position: absolute;
+                //             // left: 0;
+                //             // top: 50%;
+                //             // transform: translateY(-50%);
+                //             width: auto;
+                //             height: 100%;
+                //         }
+                //     }
+                // }
+                .bio{
                     position: relative;
                     // border : 1px solid red;
-                    height: 70vh;
+                    // height: 70vh;
                     display: flex;
                     align-items: center;
                     text-align: center;
+                    .bio-inner{
+                        width: 80%;;
+                    }
                     .bio-tittle{
                         position:absolute;
                         // border : 4px solid red;
                         color : white;
-                        background-color: rgb(63, 116, 200);
+                        background-color: rgb(18, 119, 147);
                         padding: 20px;
                         top : 20px;
-                        left: -40px;
-                        width: 120%;
+                        left: -80px;
+                        width: 100%;
                     }
 
                     .bio-desc{
                         font-size: 1.5em;
-                        // border : 4px solid purple;
                         text-align: center;
-
                         display: flex;
                         flex-direction: column;
                         justify-content: space-between;
@@ -108,24 +134,24 @@
                         padding: 10vh 0;
                         
                         .bio-list{
-                            // border : 4px solid green;
                             height: 100%;
                             display: flex;
                             justify-content: space-between;
-                            align-items: center;
+                            align-items: left;
                             flex-direction: column;
                             list-style-type: none; 
-                            padding: 50px;
-                            // border : 1px solid black;
+                            padding: 25px;
+                            // border: 1px solid red;
                         }
 
                         .bio-contact{
+                            padding: 25px;
                             height: 100%;
+                            width: 100%;
                             display: flex;
                             justify-content:space-between;
                             align-items: center;
                             flex-direction: column;
-                            // border : 1px solid black;
 
                         }
                     }
