--- a/assets/style/components/gallery.scss
+++ b/assets/style/components/gallery.scss
@@ -9,15 +9,15 @@
         // filter : invert(60%) sepia(16%) saturate(1689%) hue-rotate(151deg) brightness(81%) contrast(93%);
     }
 
-    header{
+    .header{
         color : white;
-        a{
+        .left-container nav ul li a { color : white;}
+        a {color : white;}
+        .right-container .city-name{
             color : white;
+            font-size: .7em;
         }
-    }
 
-    header .left-container nav ul li a {
-        color : white;
     }
 
 } 
@@ -47,9 +47,9 @@
     .gallery-content{
         margin-bottom: 20vh;
 
-        .headshots, .editorial-shots, .production-shots {
+        .headshots, .editorial-shots, .production-shots{
             .title{
-                width: 100;
+                // width: 100%;
                 height: 15vh;
                 display: flex;
                 justify-content: space-around;
@@ -64,18 +64,41 @@
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                gap: 10px;
+                // margin : 0 25px;
 
-                .top .bottom{
+                .top, .bottom{
                     display: flex;
                     gap: 10px; 
-                    } 
-                    .flex-item {
-                        width: 250px; /* Set a fixed width for the images */
-                        height: 300px; /* Set a fixed height for the images */
-                        flex: 4;
-                        object-fit: cover; /* Ensure images cover the available space without distortion */
-                        max-width: 100%;
+                    // width: 80%;
+                    // margin: 0 25px;
+                } 
+                .flex-item {
+                    width: 250px; /* Set a fixed width for the images */
+                    height: 300px; /* Set a fixed height for the images */
+                    flex: 4;
+                    object-fit: cover; /* Ensure images cover the available space without distortion */
+                    object-position: top; /* Center the image */
+                    max-width: 100%;
+                }
+
+                // .flex-item-p1{}
+
+            }
+        }
+
+        .production-shots {
+            .top, .mid, .bottom{
+                .img-container {
+                    // overflow: hidden; /* Hide the overflow to create the cutout effect */
+                    position: relative;
+                    .i1{
+                        object-position: top right;
                     }
+                    .i3{
+                        object-position: top left;
+                    }
+                }
             }
         }
 
