--- a/assets/style/components/media.css
+++ b/assets/style/components/media.css
@@ -1,17 +1,21 @@
-.media header {
+.media .header {
   width: 100%;
   position: relative;
   color: rgba(255, 255, 255, 0.825);
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
 }
-.media header a {
+.media .header a {
   color: rgba(255, 255, 255, 0.825);
 }
-.media header .left-container nav ul li a {
+.media .header .left-container nav ul li a {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.825);
 }
-.media header .right-container .links-box .link-social {
+.media .header .right-container .city-name {
+  color: rgba(255, 255, 255, 0.825);
+  font-size: 0.7em;
+}
+.media .header .right-container .links-box .link-social {
   filter: invert(100%) brightness(100%);
   opacity: 0.825;
 }
@@ -33,7 +37,7 @@
   text-align: center;
   width: 100%;
   padding: 5vh;
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
   color: white;
 }
 .media .container .top .title h2 {
