--- a/assets/style/components/navbar.scss
+++ b/assets/style/components/navbar.scss
@@ -1,26 +1,25 @@
-header{
-
+.header {
     position: absolute;
     width: 100%;
     display: flex;
     justify-content: space-between;
-
     .header-inner{
         width: 100%;
         max-width: 1500px;
-        font-size: 19px;
-        letter-spacing: 1.2em;
+        font-size: 22px;
+        // letter-spacing: 2em;
         margin : 0 auto;
         display: flex;
         justify-content: space-between;
+        // border : 2px solid red;
         .left-container {
-            margin-left : 8%;
+            // margin-left : 3%;
             .header-name{
                 font-family: literal;
                 // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
                 font-style: normal;
                 font-size: 3.5em;
-                letter-spacing: .05em;
+                // letter-spacing: em;
                 text-transform: uppercase;
                 a{
                     text-decoration: none;
@@ -34,11 +33,15 @@ header{
                     width: auto;
                     font-size: .8em;
                     text-transform: uppercase;
-                    letter-spacing: .09em;
+                    letter-spacing: .05em;
                     font-weight: 300;
+                    justify-content: center;
+                    align-items: center;
                     li {
                         text-decoration: none;
                         padding : 0 5px;
+                        display: flex;
+
                         a {
                             text-decoration: none;
                             color : black;
@@ -52,6 +55,7 @@ header{
         }
     
         .right-container{
+            // border : 1px solid red;
             margin-right : 8%;
             padding : 1% 0;
             width: 20%;
@@ -59,15 +63,6 @@ header{
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            .city-name{
-                font-size : .8em;
-                letter-spacing: .3em;
-                line-height: 1em;
-                padding : 0 10px;
-                text-align: center;
-                font-weight: 700;
-                width: 100%;
-            }
             .links-box{
                 display: flex;
                 width: 100%;
@@ -86,87 +81,218 @@ header{
                     }
                 }
             }
+            .city-name{
+                font-size : 21px;
+                letter-spacing: .3em;
+                line-height: 1em;
+                padding : 0 10px;
+                text-align: center;
+                font-weight: 700;
+            }
         
         }
     }
+}
+
+.index-header {
+    position: absolute;
+    width: 60vw;
+    padding: 5vw;
+    height: 100vh;
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .header-inner {
+        // border: 2px dashed red;
+        min-height: 50vh;
+        min-width: 80%;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+
+        .city-name {
+            font-size: 2vw;
+            letter-spacing: .3em;
+            line-height: 3em;
+            padding: 0 10px;
+            text-align: center;
+            font-weight: 700;
+            width: 100%;
+        }
+
+        .header-name {
+            font-family: literal;
+            // font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-style: normal;
+            font-size: max(30px, 6vw);
+            letter-spacing: .1em;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-transform: uppercase;
+
+            a {
+                text-decoration: none;
+            }
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            ul {
+                display: flex;
+                list-style-type: none;
+                width: 90%;
+                text-transform: uppercase;
+                letter-spacing: .1em;
+                font-weight: 300;
+                line-height: 4;
+                // border : 2px solid red;
+                justify-content: space-between;
+
+                li {
+                    text-decoration: none;
+                    padding: 0 5px;
+
+                    a {
+                        text-decoration: none;
+                        color: black;
+                        // font-size: min(25px, 2.5vw);
+                        font-size: 1.5vw;
+
+                    }
+
+                    a:hover {
+                        color: rgb(109, 185, 179)
+                    }
+                }
+            }
+        }
 
 
+
+        .links-box-wrapper{
+            width: 100%;
+            // border : 2px red dashed;
+            display: flex;
+            justify-content: center;
+
+        }
+
+        .links-box {
+            display: flex;
+            align-items: center;
+            width: 80%;
+            justify-content: space-around;
+            // padding: 5px 20px;
+        
+
+            .img-outer {
+                border-radius: 50%;
+                padding: 1em;
+                margin: 1em;
+                border: 2px solid black;
+                display: inline-block;
+                // font-size: 2vw;
+
+                img {
+                    min-width: 2.5vw;
+                    min-height: 2.5vw;
+                }
+            }
+        }
+
+    }
 }
 
 
-
-
-.header-mobile, .nav-button, .nav-mobile{
+.header-mobile,
+.nav-button,
+.nav-mobile {
     display: none;
 }
 
 @media only screen and (max-width: 640px) {
 
     @keyframes slide-in {
-        from {margin-left : -100vw;}
-        to {margin-left : 0;}
+        from {
+            margin-left: -100vw;
+        }
+
+        to {
+            margin-left: 0;
+        }
     }
 
     header {
-      display: none;
+        display: none;
     }
 
-    .header-mobile{
+    .header-mobile {
         display: block;
         position: absolute;
-        top: 0;left : 0;
-        height: 10vh; 
+        top: 0;
+        left: 0;
+        height: 10vh;
         width: 100vw;
         display: flex;
         justify-content: center;
         align-items: center;
-        a{
+
+        a {
             text-decoration: none;
-            color : white;
+            color: white;
             font-size: 2em;
             letter-spacing: .2em;
         }
     }
 
-    .nav-button, .header-mobile{
+    .nav-button,
+    .header-mobile {
         background-color: rgba(13, 13, 20, 0.8);
     }
 
-    .nav-button{
+    .nav-button {
         display: block;
         position: fixed;
-        bottom: 0;left:0;
-        height: 10vh; 
-        width:100vw;
+        bottom: 0;
+        left: 0;
+        height: 10vh;
+        width: 100vw;
         display: flex;
         justify-content: center;
         align-items: center;
         cursor: pointer;
-        img{
+
+        img {
             width: 50px;
             height: 50px;
         }
     }
 
-    .nav-mobile{
+    .nav-mobile {
         // display: flex;
         position: fixed;
         animation-name: slide-in;
         animation-duration: 2s;
-        height: 100vh; 
-        width : 100vw;
+        height: 100vh;
+        width: 100vw;
         z-index: 1;
-        .navbar-mob-options{
+
+        .navbar-mob-options {
             ul {
                 height: 60vh;
                 display: flex;
                 justify-content: space-around;
                 flex-direction: column;
-                padding : 30px;
+                padding: 30px;
                 list-style-type: none;
+
                 li {
-                    a{
-                        color : white;
+                    a {
+                        color: white;
                         text-transform: uppercase;
                         text-decoration: none;
                         font-size: 2em;
@@ -174,29 +300,32 @@ header{
                     }
                 }
             }
+
             background-color: rgba(41, 108, 139, 0.9);
-            height: 100vh; 
+            height: 100vh;
             width : 90vw;
         }
 
-        .close-sec{
+        .close-sec {
             width: 10vw;
-            height: 100vh; 
-            .close-btn-wrapper{
+            height: 100vh;
+
+            .close-btn-wrapper {
                 height: 10vh;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 background-color: rgba(16, 85, 90, 0.8);
-                cursor : pointer;
-                img{
+                cursor: pointer;
+
+                img {
                     height: 50%;
                     width: 50%;
                 }
             }
         }
     }
-    
 
 
-  }
+
+}
