--- a/assets/style/components/resume.css
+++ b/assets/style/components/resume.css
@@ -1,18 +1,22 @@
 /*----------------------Resume----------------------*/
-.resume header {
+.resume .header {
   width: 100%;
   position: relative;
   color: rgba(255, 255, 255, 0.825);
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
 }
-.resume header a {
+.resume .header a {
   color: rgba(255, 255, 255, 0.825);
 }
-.resume header .left-container nav ul li a {
+.resume .header .left-container nav ul li a {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.825);
 }
-.resume header .right-container .links-box .link-social {
+.resume .header .right-container .city-name {
+  color: rgba(255, 255, 255, 0.825);
+  font-size: 0.7em;
+}
+.resume .header .right-container .links-box .link-social {
   filter: invert(100%) brightness(100%);
   opacity: 0.825;
 }
@@ -34,7 +38,7 @@
   text-align: center;
   width: 100%;
   padding: 5vh;
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
   color: white;
 }
 .resume .container .top .title h2 {
@@ -83,12 +87,14 @@
   justify-content: center;
   flex-direction: column;
 }
+.resume .container .inner .main .left-div, .resume .container .inner .main .right-div {
+  padding: 5vh;
+}
 .resume .container .inner .main .img-container {
-  height: 110vh;
+  min-height: 100vh;
   width: 100%;
 }
 .resume .container .inner .main .img-container img {
-  height: auto;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -103,7 +109,7 @@
 .resume .container .inner .main .button {
   padding: 20px;
   letter-spacing: 0.15em;
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
   color: white;
   cursor: pointer;
   border: none;
