--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -29,55 +29,53 @@
   font-family: lt_wave;
 }
 
-header {
+.header {
   position: absolute;
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-header .header-inner {
+.header .header-inner {
   width: 100%;
   max-width: 1500px;
-  font-size: 19px;
-  letter-spacing: 1.2em;
+  font-size: 22px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
 }
-header .header-inner .left-container {
-  margin-left: 8%;
-}
-header .header-inner .left-container .header-name {
+.header .header-inner .left-container .header-name {
   font-family: literal;
   font-style: normal;
   font-size: 3.5em;
-  letter-spacing: 0.05em;
   text-transform: uppercase;
 }
-header .header-inner .left-container .header-name a {
+.header .header-inner .left-container .header-name a {
   text-decoration: none;
 }
-header .header-inner .left-container nav ul {
+.header .header-inner .left-container nav ul {
   display: flex;
   list-style-type: none;
   width: auto;
   font-size: 0.8em;
   text-transform: uppercase;
-  letter-spacing: 0.09em;
+  letter-spacing: 0.05em;
   font-weight: 300;
+  justify-content: center;
+  align-items: center;
 }
-header .header-inner .left-container nav ul li {
+.header .header-inner .left-container nav ul li {
   text-decoration: none;
   padding: 0 5px;
+  display: flex;
 }
-header .header-inner .left-container nav ul li a {
+.header .header-inner .left-container nav ul li a {
   text-decoration: none;
   color: black;
 }
-header .header-inner .left-container nav ul li a:hover {
+.header .header-inner .left-container nav ul li a:hover {
   color: rgb(109, 185, 179);
 }
-header .header-inner .right-container {
+.header .header-inner .right-container {
   margin-right: 8%;
   padding: 1% 0;
   width: 20%;
@@ -86,22 +84,13 @@ header .header-inner .right-container {
   flex-direction: column;
   justify-content: space-around;
 }
-header .header-inner .right-container .city-name {
-  font-size: 0.8em;
-  letter-spacing: 0.3em;
-  line-height: 1em;
-  padding: 0 10px;
-  text-align: center;
-  font-weight: 700;
-  width: 100%;
-}
-header .header-inner .right-container .links-box {
+.header .header-inner .right-container .links-box {
   display: flex;
   width: 100%;
   justify-content: space-around;
   padding: 5px 20px;
 }
-header .header-inner .right-container .links-box .img-outer {
+.header .header-inner .right-container .links-box .img-outer {
   border-radius: 50%;
   padding: 8px;
   margin: 5px;
@@ -109,12 +98,111 @@ header .header-inner .right-container .links-box .img-outer {
   display: inline-block;
   font-size: 21px;
 }
-header .header-inner .right-container .links-box .img-outer img {
+.header .header-inner .right-container .links-box .img-outer img {
   min-width: 25;
   min-height: 30;
 }
+.header .header-inner .right-container .city-name {
+  font-size: 21px;
+  letter-spacing: 0.3em;
+  line-height: 1em;
+  padding: 0 10px;
+  text-align: center;
+  font-weight: 700;
+}
 
-.header-mobile, .nav-button, .nav-mobile {
+.index-header {
+  position: absolute;
+  width: 60vw;
+  padding: 5vw;
+  height: 100vh;
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.index-header .header-inner {
+  min-height: 50vh;
+  min-width: 80%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.index-header .header-inner .city-name {
+  font-size: 2vw;
+  letter-spacing: 0.3em;
+  line-height: 3em;
+  padding: 0 10px;
+  text-align: center;
+  font-weight: 700;
+  width: 100%;
+}
+.index-header .header-inner .header-name {
+  font-family: literal;
+  font-style: normal;
+  font-size: max(30px, 6vw);
+  letter-spacing: 0.1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+}
+.index-header .header-inner .header-name a {
+  text-decoration: none;
+}
+.index-header .header-inner nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.index-header .header-inner nav ul {
+  display: flex;
+  list-style-type: none;
+  width: 90%;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-weight: 300;
+  line-height: 4;
+  justify-content: space-between;
+}
+.index-header .header-inner nav ul li {
+  text-decoration: none;
+  padding: 0 5px;
+}
+.index-header .header-inner nav ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.5vw;
+}
+.index-header .header-inner nav ul li a:hover {
+  color: rgb(109, 185, 179);
+}
+.index-header .header-inner .links-box-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.index-header .header-inner .links-box {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  justify-content: space-around;
+}
+.index-header .header-inner .links-box .img-outer {
+  border-radius: 50%;
+  padding: 1em;
+  margin: 1em;
+  border: 2px solid black;
+  display: inline-block;
+}
+.index-header .header-inner .links-box .img-outer img {
+  min-width: 2.5vw;
+  min-height: 2.5vw;
+}
+
+.header-mobile,
+.nav-button,
+.nav-mobile {
   display: none;
 }
 
@@ -147,7 +235,8 @@ header .header-inner .right-container .links-box .img-outer img {
     font-size: 2em;
     letter-spacing: 0.2em;
   }
-  .nav-button, .header-mobile {
+  .nav-button,
+  .header-mobile {
     background-color: rgba(13, 13, 20, 0.8);
   }
   .nav-button {
@@ -263,31 +352,32 @@ footer .links-box .link-social {
 }
 
 /* ----------------- Header specific style for HOME -------------- */
-.home header .right-container .links-box .link-social {
-  filter: invert(75%) sepia(24%) saturate(748%) hue-rotate(164deg) brightness(95%) contrast(92%);
+.home .index-header .header-inner .links-box-wrapper .links-box .link-social {
+  filter: invert(27%) sepia(96%) saturate(423%) hue-rotate(156deg) brightness(93%) contrast(87%);
 }
-.home header a {
-  color: rgb(107, 195, 222);
+.home .index-header a {
+  color: rgb(18, 119, 147);
 }
-.home header .left-container nav ul li a {
-  color: rgb(107, 195, 222);
+.home .index-header nav ul li a {
+  color: rgb(15, 93, 114);
 }
-.home header .right-container .city-name {
-  color: rgb(107, 195, 222);
+.home .index-header .city-name {
+  color: rgb(18, 119, 147);
 }
 
 /*----------------------About----------------------*/
-.about header .right-container .links-box .link-social {
+.about .header .right-container .links-box .link-social {
   filter: invert(60%) sepia(16%) saturate(1689%) hue-rotate(151deg) brightness(81%) contrast(93%);
 }
-.about header a {
-  color: rgba(50, 145, 182, 0.6039215686);
+.about .header a {
+  color: rgb(18, 119, 147);
 }
-.about header .left-container nav ul li a {
-  color: rgba(50, 145, 182, 0.6039215686);
+.about .header .left-container nav ul li a {
+  color: rgb(18, 119, 147);
 }
-.about header .right-cont168b5aainer .city-name {
-  color: rgba(34, 77, 94, 0.6039215686);
+.about .header .right-container .city-name {
+  color: rgb(18, 119, 147);
+  font-size: 0.7em;
 }
 
 .about {
@@ -322,9 +412,8 @@ footer .links-box .link-social {
   max-width: 80vw;
 }
 .about .about-content .left-section {
-  max-height: 800px;
-  padding: 20px;
   width: 50%;
+  padding: 5vw;
 }
 .about .about-content .left-section .img-container {
   height: 100%;
@@ -373,20 +462,24 @@ footer .links-box .link-social {
   }
 }
 /*----------------------Resume----------------------*/
-.resume header {
+.resume .header {
   width: 100%;
   position: relative;
   color: rgba(255, 255, 255, 0.825);
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
 }
-.resume header a {
+.resume .header a {
   color: rgba(255, 255, 255, 0.825);
 }
-.resume header .left-container nav ul li a {
+.resume .header .left-container nav ul li a {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.825);
 }
-.resume header .right-container .links-box .link-social {
+.resume .header .right-container .city-name {
+  color: rgba(255, 255, 255, 0.825);
+  font-size: 0.7em;
+}
+.resume .header .right-container .links-box .link-social {
   filter: invert(100%) brightness(100%);
   opacity: 0.825;
 }
@@ -408,7 +501,7 @@ footer .links-box .link-social {
   text-align: center;
   width: 100%;
   padding: 5vh;
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
   color: white;
 }
 .resume .container .top .title h2 {
@@ -457,12 +550,14 @@ footer .links-box .link-social {
   justify-content: center;
   flex-direction: column;
 }
+.resume .container .inner .main .left-div, .resume .container .inner .main .right-div {
+  padding: 5vh;
+}
 .resume .container .inner .main .img-container {
-  height: 110vh;
+  min-height: 100vh;
   width: 100%;
 }
 .resume .container .inner .main .img-container img {
-  height: auto;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -477,7 +572,7 @@ footer .links-box .link-social {
 .resume .container .inner .main .button {
   padding: 20px;
   letter-spacing: 0.15em;
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
   color: white;
   cursor: pointer;
   border: none;
@@ -505,14 +600,18 @@ footer .links-box .link-social {
 .gallery header .right-container .links-box .link-social {
   filter: invert(99%) sepia(1%) saturate(2328%) hue-rotate(135deg) brightness(118%) contrast(100%);
 }
-.gallery header {
+.gallery .header {
   color: white;
 }
-.gallery header a {
+.gallery .header .left-container nav ul li a {
   color: white;
 }
-.gallery header .left-container nav ul li a {
+.gallery .header a {
   color: white;
+}
+.gallery .header .right-container .city-name {
+  color: white;
+  font-size: 0.7em;
 }
 
 .gallery {
@@ -539,7 +638,6 @@ footer .links-box .link-social {
   margin-bottom: 20vh;
 }
 .gallery .gallery-content .headshots .title, .gallery .gallery-content .editorial-shots .title, .gallery .gallery-content .production-shots .title {
-  width: 100;
   height: 15vh;
   display: flex;
   justify-content: space-around;
@@ -553,8 +651,9 @@ footer .links-box .link-social {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
 }
-.gallery .gallery-content .headshots .inner .top .bottom, .gallery .gallery-content .editorial-shots .inner .top .bottom, .gallery .gallery-content .production-shots .inner .top .bottom {
+.gallery .gallery-content .headshots .inner .top, .gallery .gallery-content .headshots .inner .bottom, .gallery .gallery-content .editorial-shots .inner .top, .gallery .gallery-content .editorial-shots .inner .bottom, .gallery .gallery-content .production-shots .inner .top, .gallery .gallery-content .production-shots .inner .bottom {
   display: flex;
   gap: 10px;
 }
@@ -564,7 +663,20 @@ footer .links-box .link-social {
   flex: 4;
   -o-object-fit: cover;
      object-fit: cover; /* Ensure images cover the available space without distortion */
+  -o-object-position: top;
+     object-position: top; /* Center the image */
   max-width: 100%;
+}
+.gallery .gallery-content .production-shots .top .img-container, .gallery .gallery-content .production-shots .mid .img-container, .gallery .gallery-content .production-shots .bottom .img-container {
+  position: relative;
+}
+.gallery .gallery-content .production-shots .top .img-container .i1, .gallery .gallery-content .production-shots .mid .img-container .i1, .gallery .gallery-content .production-shots .bottom .img-container .i1 {
+  -o-object-position: top right;
+     object-position: top right;
+}
+.gallery .gallery-content .production-shots .top .img-container .i3, .gallery .gallery-content .production-shots .mid .img-container .i3, .gallery .gallery-content .production-shots .bottom .img-container .i3 {
+  -o-object-position: top left;
+     object-position: top left;
 }
 
 @media only screen and (max-width: 640px) {
@@ -576,20 +688,24 @@ footer .links-box .link-social {
     width: 50%;
   }
 }
-.media header {
+.media .header {
   width: 100%;
   position: relative;
   color: rgba(255, 255, 255, 0.825);
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
 }
-.media header a {
+.media .header a {
   color: rgba(255, 255, 255, 0.825);
 }
-.media header .left-container nav ul li a {
+.media .header .left-container nav ul li a {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.825);
 }
-.media header .right-container .links-box .link-social {
+.media .header .right-container .city-name {
+  color: rgba(255, 255, 255, 0.825);
+  font-size: 0.7em;
+}
+.media .header .right-container .links-box .link-social {
   filter: invert(100%) brightness(100%);
   opacity: 0.825;
 }
@@ -611,7 +727,7 @@ footer .links-box .link-social {
   text-align: center;
   width: 100%;
   padding: 5vh;
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
   color: white;
 }
 .media .container .top .title h2 {
@@ -673,20 +789,24 @@ footer .links-box .link-social {
   padding: 1em;
 }
 
-.contact header {
+.contact .header {
   width: 100%;
   position: relative;
   color: rgba(255, 255, 255, 0.825);
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
 }
-.contact header a {
+.contact .header a {
   color: rgba(255, 255, 255, 0.825);
 }
-.contact header .left-container nav ul li a {
+.contact .header .left-container nav ul li a {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.825);
 }
-.contact header .right-container .links-box .link-social {
+.contact .header .right-container .city-name {
+  color: rgba(255, 255, 255, 0.825);
+  font-size: 0.7em;
+}
+.contact .header .right-container .links-box .link-social {
   filter: invert(100%) brightness(100%);
   opacity: 0.825;
 }
@@ -708,7 +828,7 @@ footer .links-box .link-social {
   text-align: center;
   width: 100%;
   padding: 5vh;
-  background-color: rgb(40, 87, 174);
+  background-color: rgb(18, 119, 147);
   color: white;
 }
 .contact .container .top .title h2 {
@@ -720,7 +840,7 @@ footer .links-box .link-social {
   max-width: 1500px;
 }
 .contact .container .inner .main {
-  padding: 5vh;
+  padding: 5vh 10vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -729,30 +849,31 @@ footer .links-box .link-social {
   width: 40vw;
 }
 .contact .container .inner .main .contact-photo .img-container {
-  height: 70vh;
-  max-width: 40vw;
+  width: 100%;
 }
 .contact .container .inner .main .contact-photo .img-container img {
-  height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+}
+.contact .container .inner .main .bio {
+  width: 40vw;
 }
 .contact .container .inner .main .bio {
   position: relative;
-  height: 70vh;
   display: flex;
   align-items: center;
   text-align: center;
 }
+.contact .container .inner .main .bio .bio-inner {
+  width: 80%;
+}
 .contact .container .inner .main .bio .bio-tittle {
   position: absolute;
   color: white;
-  background-color: rgb(63, 116, 200);
+  background-color: rgb(18, 119, 147);
   padding: 20px;
   top: 20px;
-  left: -40px;
-  width: 120%;
+  left: -80px;
+  width: 100%;
 }
 .contact .container .inner .main .bio .bio-desc {
   font-size: 1.5em;
@@ -767,13 +888,15 @@ footer .links-box .link-social {
   height: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
   flex-direction: column;
   list-style-type: none;
-  padding: 50px;
+  padding: 25px;
 }
 .contact .container .inner .main .bio .bio-desc .bio-contact {
+  padding: 25px;
   height: 100%;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
